--- a/angular-frontend/src/styles.scss
+++ b/angular-frontend/src/styles.scss
@@ -34,6 +34,7 @@ body {
   margin: 0;
   font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
   color: #000000DE;
+  overflow: hidden;
 }
 
 .logo {
@@ -558,7 +559,7 @@ mat-expansion-panel.side-toggle {
 .map-drag-element {
   position: absolute;
   display: flex;
-  z-index: 10;
+  z-index: 4;
   user-select: none;
   .handle {
     background-color: white;
@@ -622,14 +623,14 @@ app-map-controls {
   position: absolute;
   right: 90px;
   top: 30px;
-  z-index: 2;
+  z-index: 6;
 }
 
 #legend {
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 5;
   height: 40vh;
   pointer-events: none;
   .side-toggle>div {
@@ -687,4 +688,9 @@ app-map-controls {
       margin-left: 7px;
     }
   }
+}
+
+.side-toggle-content {
+  max-width: 40vw;
+  //overflow-x: auto;
 }
